sandc/test/fixtures/astRegression/shouldFail/return/MissingSemicolonNoVal.sand
pub class MissingSemicolonNoVal {
    noVal() {
        return
    }
}